<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scroll_view_login"
    tools:context=".ui.auth.TelaLogin"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/layout_logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="30dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/card_view_formulario"
            app:layout_constraintVertical_weight="1">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:contentDescription="@string/app_name"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_formulario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            app:cardCornerRadius="20dp"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="-10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="40dp">

                <TextView
                    android:id="@+id/tv_titulo_entrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entrar"
                    android:textColor="@color/my_primary"
                    android:textSize="32sp"
                    android:textStyle="bold"/>

                <View style="@style/Views" android:id="@+id/view_divisor_titulo"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <View style="@style/Views" android:id="@+id/view_divisor_email"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_senha"
                    android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/cb_lembrar_senha"
                        style="@style/checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:alpha="0.5"
                        android:text="@string/lembrar_senha" />

                    <TextView
                        android:id="@+id/tv_esqueci_senha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/checkboxtermos"
                        android:alpha="0.5"
                        android:text="@string/Esqueci_senha" />
                </RelativeLayout>

                <View style="@style/Views" android:id="@+id/view_divisor_opcoes"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/btn_login"
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/Login" />

                <com.google.android.material.button.MaterialButton
                    style="@style/btn_login"
                    android:id="@+id/btn_cadastrar"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/cadastrar" />

                <View style="@style/Views" android:id="@+id/view_divisor_botoes"/>


                <View style="@style/Views" android:id="@+id/view_divisor_preferencia"/>

                <LinearLayout
                    android:id="@+id/layout_social_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">


                </LinearLayout>

                <View style="@style/Views" android:id="@+id/view_divisor_final"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>